examples/test_package/Double_dc_full/steps/pl___coin__rough_run1/#test_analysis_2_result.txt
### ProbLog Code Evaluation Report

---

#### **1. Document Title**  
**Evaluation of ProbLog Code for Coin Toss Simulation**

---

#### **2. Background and Purpose**  
The provided ProbLog code aims to simulate tossing a coin `CNT` times and accumulating the number of heads (`SC`) to compute the total number of heads (`S`). The code includes a recursive predicate `coins_r/3` and a probabilistic fact `coin/1`. The purpose of this evaluation is to verify the correctness of the code, analyze test results, and identify any failures or edge cases.

---

#### **3. Test Results Summary**  
The test results indicate a failure with the following error:  
```
Error evaluating Problog model:
    result = self.handle_nonground(
             ^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 905, in handle_nonground
    raise NonGroundProbabilisticClause(location=database.lineno(node.location))
problog.engine.NonGroundProbabilisticClause: Encountered a non-ground probabilistic clause at 1:5.
```

- **Failed Query**: `query(total(_))`  
- **Expected Result**: A probability distribution over the total number of heads after 4 coin tosses.  
- **Actual Result**: Error due to a non-ground probabilistic clause.

---

#### **4. Failure Localization**  
- **Error Location**: The error occurs in the probabilistic fact `coin(C) :- make_coin(C,0.8).` (line 1:5).  
- **Root Cause**: The variable `C` in `coin(C)` is not grounded when the probabilistic fact is evaluated. ProbLog requires probabilistic facts to be ground (i.e., all variables must be instantiated).

---

#### **5. Root Cause Analysis**  
- **Logical Correctness**: The recursive predicate `coins_r/3` is logically correct for classical Prolog but fails in ProbLog due to the non-ground probabilistic fact.  
- **Probabilistic Rules**: The code violates ProbLog's requirement that probabilistic facts must be ground. The negation/implication rules are not applicable here.  
- **DeepProbLog Feature**: Not used in this code.  

---

#### **6. Overall Analysis**  
- **Functional Requirements**:  
  - **Classical Reasoning**: The recursive logic is correct but not executed due to the probabilistic error.  
  - **Probabilistic Reasoning**: Failed due to the non-ground probabilistic fact.  
  - **Neural Network Integration**: Not applicable.  

- **Edge Cases**:  
  - The code does not handle cases where `CNT` is zero or negative (though the base case `coins_r(SC,SC,0)` is defined).  
  - Performance for deep recursion (large `CNT`) is not tested.  

---

#### **7. Error Summary**  

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|----------------------------------|-------------------------------------|
| 1      | Non-ground probabilistic clause  | Prevents execution of the query | Ground the variable `C` in `coin(C)` by instantiating it before use. |

---

### **Final Remarks**  
The code fails due to a non-ground probabilistic fact, which is a fundamental requirement in ProbLog. To fix this, ensure all probabilistic facts are grounded before evaluation. The recursive logic is otherwise correct but untested due to the error. Edge cases and performance for large `CNT` should be addressed in future revisions.  

**Word Count**: ~400 words.  